[package]
name = "my_bevy_game"
version = "0.1.0"
authors = ["Hamel, Sebastian James <shamel2@rockets.utoledo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { path = "crates/bevy" }
bevy = "0.4.0"
building-blocks = { path = "crates/building-blocks" }
noise = "0.6.0"
rand = "0.7.3"
bevy_rapier3d = "0.7.0"

[features]
default = []

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
incremental = false
codegen-units = 1
